# piresgg

./: .gitignore  .prettierrc.toml  Cargo.toml  Dockerfile  Rocket.example.toml  build.rs
server/: Cargo.toml  build.rs  config.example.toml  package-lock.json  package.json  tailwind.config.js
server/content/: about.md  about.toml  projects.md  projects.toml
server/content/first-article/: first-article.md  first-article.toml
server/content/fish-fest-2024/: fish-fest-2024.md  fish-fest-2024.toml
server/content/how-to-make-a-blog/: how-to-make-a-blog.md  how-to-make-a-blog.toml
server/frontend/: main.js  main.ts  tailwind.css
server/frontend/templates/: index.tera.html  post.tera.html  tag.tera.html  tags.tera.html
server/frontend/templates/atom/: feed.tera.html
server/frontend/templates/components/: buttons.tera.html  icons.tera.html
server/frontend/templates/debug/: vite.tera.html
server/frontend/templates/layouts/: base.tera.html
server/public/: .gitignore
server/src/: config.rs  feed.rs  html.rs  lib.rs  main.rs  routes.rs  states.rs
src/: main.rs
static/images/: piresdotgg_final.vectornator
static/js/: script.js
static/sass/: master.scss
templates/: 404.html.tera  about.html.tera  base.html.tera  index.html.tera
