[package]
name = "piresdotgg"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2" }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"]}
tokio = { version = "1.18.0", features = ["full"] }