[package]
name = "blog-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
chrono = { version = "0.4.35", features = ["serde"] }
fastrand = "2.0.2"
pulldown-cmark = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
tera = "1.19.1"
toml = "0.8.12"
walkdir = "2.5.0"
